package: set build destination to the root target directory

--- a/lect-packager/lect-bundle/pom.xml
+++ b/lect-packager/lect-bundle/pom.xml
@@ -15,7 +15,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<package.output.dir>${project.parent.parent.basedir}/../release</package.output.dir>
+		<package.output.dir>${project.parent.parent.build.directory}</package.output.dir>
 	</properties>
 
 	<build>
