--- a/lect-media/pom.xml
+++ b/lect-media/pom.xml
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.lecturestudio.avdev</groupId>
 			<artifactId>avdev</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>0.1.0</version>
 		</dependency>
 
 		<dependency>
