--- a/lect-presenter-api/pom.xml
+++ b/lect-presenter-api/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>org.lecturestudio.stylus</groupId>
 			<artifactId>stylus</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>0.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>dev.onvoid.webrtc</groupId>
