--- a/lect-presenter-fx/pom.xml
+++ b/lect-presenter-fx/pom.xml
@@ -83,7 +83,7 @@
 		<dependency>
 			<groupId>org.lecturestudio.stylus</groupId>
 			<artifactId>stylus-javafx</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>0.1.0</version>
 		</dependency>
 	</dependencies>
 </project>
