core: updated contributors

--- a/lect-core/src/main/resources/contributors/contributors_de.yaml
+++ b/lect-core/src/main/resources/contributors/contributors_de.yaml
@@ -11,3 +11,13 @@
     Fachbereich Informatik\n
 
     Fachgebiet Eingebettete Systeme und ihre Anwendungen"
+- name: Andy Schürr
+  contributions:
+    - Konzept
+    - Feldtest
+  firm:
+    "Technische Universit\u00e4t Darmstadt\n
+
+    Fachbereich Elektrotechnik und Informationstechnik\n
+
+    Fachgebiet Echtzeitsysteme"
