--- a/lect-core/src/main/resources/contributors/contributors_en.yaml
+++ b/lect-core/src/main/resources/contributors/contributors_en.yaml
@@ -6,8 +6,18 @@
     - Initial Concept
     - Field Testing
   firm:
-    "Technische Universit\u00e4t Darmstadt\n
+    "Technical University of Darmstadt\n
 
     Department of Computer Science\n
 
     Embedded Systems and Applications Group"
+- name: Andy Schürr
+  contributions:
+    - Concept
+    - Field Testing
+  firm:
+    "Technical University of Darmstadt\n
+
+    Department of Electrical Engineering and Information Technology\n
+
+    Real-Time Systems Lab"
