editor-api: load web-player resources from the lect-player-web module

--- a/lect-editor-api/pom.xml
+++ b/lect-editor-api/pom.xml
@@ -44,5 +44,10 @@
 			<artifactId>lect-media</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.lecturestudio.player</groupId>
+			<artifactId>lect-player-web</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 </project>
