--- a/lect-presenter-api/pom.xml
+++ b/lect-presenter-api/pom.xml
@@ -69,5 +69,12 @@
 			<artifactId>webrtc-java</artifactId>
 			<version>0.2.0</version>
 		</dependency>
+
+		<dependency>
+			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.13.1</version>
+		</dependency>
 	</dependencies>
 </project>
