--- a/lect-web-parent/lect-web-frontend/pom.xml
+++ b/lect-web-parent/lect-web-frontend/pom.xml
@@ -23,13 +23,14 @@
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
-				<version>1.6</version>
+				<version>1.11.2</version>
 				<configuration>
 					<workingDirectory>src/main/frontend</workingDirectory>
+					<installDirectory>target</installDirectory>
 				</configuration>
 				<executions>
 					<execution>
-						<id>install-node-and-npm</id>
+						<id>install node and npm</id>
 						<goals>
 							<goal>install-node-and-npm</goal>
 						</goals>
