--- a/lect-presenter-api/pom.xml
+++ b/lect-presenter-api/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<resteasy.version>4.6.0.Final</resteasy.version>
+		<quarkus.version>1.13.3.Final</quarkus.version>
 	</properties>
 
 	<build>
@@ -59,6 +60,13 @@
 			<groupId>org.lecturestudio.broadcast</groupId>
 			<artifactId>lect-broadcast</artifactId>
 			<version>4.0.0</version>
+			<!-- Broadcaster uses a separate classpath -->
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.lecturestudio.stylus</groupId>
@@ -69,6 +77,23 @@
 			<groupId>dev.onvoid.webrtc</groupId>
 			<artifactId>webrtc-java</artifactId>
 			<version>0.2.0</version>
+		</dependency>
+
+		<!-- Used to bootstrap the embedded broadcaster -->
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-bootstrap-runner</artifactId>
+			<version>${quarkus.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-development-mode-spi</artifactId>
+			<version>${quarkus.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.graalvm.sdk</groupId>
+			<artifactId>graal-sdk</artifactId>
+			<version>21.0.0</version>
 		</dependency>
 
 		<dependency>
