--- a/lect-presenter-swing/pom.xml
+++ b/lect-presenter-swing/pom.xml
@@ -34,7 +34,7 @@
 							<customClasspathLayout>${artifact.artifactId}.${artifact.extension}</customClasspathLayout>
 						</manifest>
 						<manifestEntries>
-							<Class-Path>lib/javafx-controls-win.jar lib/javafx-graphics-win.jar lib/javafx-base-win.jar lib/javafx-fxml-win.jar lib/javafx-swing-win.jar lib/javafx-web-win.jar lib/javafx-media-win.jar lect-broadcast.jar</Class-Path>
+							<Class-Path>lib/javafx-controls-win.jar lib/javafx-graphics-win.jar lib/javafx-base-win.jar lib/javafx-fxml-win.jar lib/javafx-swing-win.jar lib/javafx-web-win.jar lib/javafx-media-win.jar</Class-Path>
 						</manifestEntries>
 					</archive>
 				</configuration>
