broadcast: load newly generated key pair for JWT verification from the filesystem

--- a/lect-broadcast/src/main/resources/application.properties
+++ b/lect-broadcast/src/main/resources/application.properties
@@ -15,9 +15,6 @@ quarkus.http.ssl.certificate.key-store-file-type = JKS
 quarkus.http.ssl.certificate.key-store-file = keystore.jks
 quarkus.http.ssl.certificate.key-store-password = mypassword
 
-smallrye.jwt.sign.key-location = META-INF/resources/privateKey.pem
-
-mp.jwt.verify.publickey.location = META-INF/resources/publicKey.pem
 mp.jwt.verify.issuer = https://lecturestudio.org/issuer
 
 quiz.file.whitelist = jpg,jpeg,png,pdf,txt
@@ -29,6 +26,9 @@ quiz.file.whitelist = jpg,jpeg,png,pdf,txt
 #%dev.quarkus.hibernate-orm.log.sql = true
 
 # TEST
-test.quarkus.datasource.db-kind = h2
-test.quarkus.datasource.jdbc.url = jdbc:h2:tcp://localhost/mem:test
-test.quarkus.datasource.jdbc.driver = org.h2.Driver
+%test.quarkus.datasource.db-kind = h2
+%test.quarkus.datasource.jdbc.url = jdbc:h2:tcp://localhost/mem:test
+%test.quarkus.datasource.jdbc.driver = org.h2.Driver
+
+%test.smallrye.jwt.sign.key.location = privateKey.pem
+%test.mp.jwt.verify.publickey.location = publicKey.pem
