--- a/lect-media/pom.xml
+++ b/lect-media/pom.xml
@@ -51,6 +51,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>dev.onvoid.webrtc</groupId>
+			<artifactId>webrtc-java</artifactId>
+			<version>0.3.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.concentus</groupId>
 			<artifactId>concentus</artifactId>
 			<version>1.0.0</version>
