--- a/lect-core/pom.xml
+++ b/lect-core/pom.xml
@@ -141,5 +141,22 @@
 			<artifactId>bcpkix-jdk15on</artifactId>
 			<version>1.66</version>
 		</dependency>
+
+		<dependency>
+			<groupId>dev.onvoid.webrtc</groupId>
+			<artifactId>webrtc-java</artifactId>
+			<version>0.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openpnp</groupId>
+			<artifactId>opencv</artifactId>
+			<version>[4.3.0,)</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna-platform</artifactId>
+			<version>5.8.0</version>
+		</dependency>
 	</dependencies>
 </project>
