--- a/lect-core/pom.xml
+++ b/lect-core/pom.xml
@@ -158,5 +158,11 @@
 			<artifactId>jna-platform</artifactId>
 			<version>5.8.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.pngencoder</groupId>
+			<artifactId>pngencoder</artifactId>
+			<version>0.12.0</version>
+		</dependency>
 	</dependencies>
 </project>
