--- a/lect-presenter-api/src/main/resources/stream.properties
+++ b/lect-presenter-api/src/main/resources/stream.properties
@@ -1,3 +1,4 @@
 stream.janus.websocket.url = wss://lecturestudio.dek.e-technik.tu-darmstadt.de:8989
 stream.state.websocket.url = wss://lecturestudio.dek.e-technik.tu-darmstadt.de/api/publisher/course-state
 stream.publisher.api.url = https://lecturestudio.dek.e-technik.tu-darmstadt.de
+stream.stun.servers = stun:stun.l.google.com:19302
