--- a/lect-web-parent/lect-web-api/pom.xml
+++ b/lect-web-parent/lect-web-api/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<log4j.version>2.14.0</log4j.version>
+		<netty.version>4.1.49.Final</netty.version>
 		<resteasy.version>4.6.0.Final</resteasy.version>
 	</properties>
 
@@ -47,8 +48,23 @@
 
 		<dependency>
 			<groupId>io.netty</groupId>
-			<artifactId>netty-all</artifactId>
-			<version>4.1.63.Final</version>
+			<artifactId>netty-transport</artifactId>
+			<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec</artifactId>
+			<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec-http</artifactId>
+			<version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-handler</artifactId>
+			<version>${netty.version}</version>
 		</dependency>
 
 		<dependency>
