presenter-api: course feature services

--- a/lect-core/src/main/resources/contributors/contributors_de.yaml
+++ b/lect-core/src/main/resources/contributors/contributors_de.yaml
@@ -1,6 +1,10 @@
 - name: Alex Andres
   contributions:
     - Entwickler
+  firm:
+    "Technische Universit\u00e4t Darmstadt\n
+
+    Fachgebiet Echtzeitsysteme"
 - name: Andreas Koch
   contributions:
     - Konzept
