--- a/lect-core/src/main/resources/contributors/contributors_en.yaml
+++ b/lect-core/src/main/resources/contributors/contributors_en.yaml
@@ -1,6 +1,10 @@
 - name: Alex Andres
   contributions:
     - Developer
+  firm:
+    "Technical University of Darmstadt\n
+
+    Real-Time Systems Lab"
 - name: Andreas Koch
   contributions:
     - Initial Concept
