presenter-api: adopted to the new message transport api

--- a/lect-presenter-api/src/main/resources/stream.properties
+++ b/lect-presenter-api/src/main/resources/stream.properties
@@ -1,5 +1,5 @@
 stream.janus.websocket.url = wss://lecturestudio.dek.e-technik.tu-darmstadt.de:8989
 stream.state.websocket.url = wss://lecturestudio.dek.e-technik.tu-darmstadt.de/api/publisher/course-state
-publisher.message.url = wss://lecturestudio.dek.e-technik.tu-darmstadt.de/api/publisher/messages
+publisher.api.message.url = wss://lecturestudio.dek.e-technik.tu-darmstadt.de/api/publisher/messages
 stream.publisher.api.url = https://lecturestudio.dek.e-technik.tu-darmstadt.de
 stream.stun.servers = stun:stun.l.google.com:19302
