--- a/lect-presenter-swing/pom.xml
+++ b/lect-presenter-swing/pom.xml
@@ -85,7 +85,7 @@
 		<dependency>
 			<groupId>org.lecturestudio.stylus</groupId>
 			<artifactId>stylus-awt</artifactId>
-			<version>0.1.0</version>
+			<version>0.2.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
