Added new snapshot repository to the parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,14 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+			<id>oss-sonatype-1</id>
+			<name>oss-sonatype-1</name>
+			<url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
 
 	<build>
