--- a/lect-media/pom.xml
+++ b/lect-media/pom.xml
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>dev.onvoid.webrtc</groupId>
 			<artifactId>webrtc-java</artifactId>
-			<version>0.4.0-SNAPSHOT</version>
+			<version>0.4.0</version>
 		</dependency>
 
 		<dependency>
