--- a/lect-broadcast/pom.xml
+++ b/lect-broadcast/pom.xml
@@ -43,6 +43,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${surefire-plugin.version}</version>
 				<configuration>
+					<skipTests>true</skipTests>
 					<systemPropertyVariables>
 						<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 						<maven.home>${maven.home}</maven.home>
