Added new icons for the create-quiz dialog

--- a/lect-third-party/shef/pom.xml
+++ b/lect-third-party/shef/pom.xml
@@ -33,5 +33,15 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.formdev</groupId>
+			<artifactId>svgSalamander</artifactId>
+			<version>1.1.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.formdev</groupId>
+			<artifactId>flatlaf</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 	</dependencies>
 </project>
