--- a/lect-web-parent/pom.xml
+++ b/lect-web-parent/pom.xml
@@ -18,7 +18,7 @@
 
 	<modules>
 		<module>lect-web-api</module>
-		<module>lect-web-frontend</module>
+<!--		<module>lect-web-frontend</module>-->
 	</modules>
 
 	<build>
