--- a/lect-player-web/src/main/frontend/.babelrc
+++ b/lect-player-web/src/main/frontend/.babelrc
@@ -30,6 +30,18 @@
 				"regenerator": true,
 				"useESModules": true
 			}
+		],
+		[
+			"@babel/plugin-proposal-private-property-in-object",
+			{
+				"loose": true
+			}
+		],
+		[
+			"@babel/plugin-proposal-private-methods",
+			{
+				"loose": true
+			}
 		]
 	]
 }
