--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 		<module>lect-presenter-swing</module>
 <!--		<module>lect-player-api</module>-->
 <!--		<module>lect-player-fx</module>-->
-<!--		<module>lect-player-web</module>-->
+		<module>lect-player-web</module>
 		<module>lect-editor-api</module>
 		<module>lect-editor-fx</module>
 		<module>lect-packager</module>
