--- a/lect-presenter-api/pom.xml
+++ b/lect-presenter-api/pom.xml
@@ -66,5 +66,11 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.14.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.github.url-detector</groupId>
+			<artifactId>url-detector</artifactId>
+			<version>0.1.23</version>
+		</dependency>
 	</dependencies>
 </project>
