--- a/lect-presenter-api/src/main/resources/stream.properties
+++ b/lect-presenter-api/src/main/resources/stream.properties
@@ -1,5 +1,5 @@
-stream.janus.websocket.url = wss://lecturestudio.dek.e-technik.tu-darmstadt.de:8989
-stream.state.websocket.url = wss://lecturestudio.dek.e-technik.tu-darmstadt.de/api/publisher/course-state
-publisher.api.message.url = wss://lecturestudio.dek.e-technik.tu-darmstadt.de/api/publisher/messages
-stream.publisher.api.url = https://lecturestudio.dek.e-technik.tu-darmstadt.de
+stream.janus.websocket.url = wss://{0}:8989
+stream.state.websocket.url = wss://{0}/api/publisher/course-state
+stream.message.api.url = wss://{0}/api/publisher/messages
+stream.publisher.api.url = https://{0}
 stream.stun.servers = stun:stun.l.google.com:19302
