--- a/lect-presenter-api/pom.xml
+++ b/lect-presenter-api/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<quarkus.version>1.13.3.Final</quarkus.version>
+		<openhtml.version>1.0.10</openhtml.version>
 	</properties>
 
 	<build>
@@ -65,6 +65,12 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.14.3</version>
+		</dependency>
+		<dependency>
+			<!-- Required for PDF output. -->
+			<groupId>com.openhtmltopdf</groupId>
+			<artifactId>openhtmltopdf-pdfbox</artifactId>
+			<version>${openhtml.version}</version>
 		</dependency>
 
 		<dependency>
