--- a/lect-swing/pom.xml
+++ b/lect-swing/pom.xml
@@ -46,6 +46,11 @@
 			<version>4.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.lecturestudio.web.api</groupId>
+			<artifactId>lect-web-api</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.formdev</groupId>
 			<artifactId>flatlaf</artifactId>
 			<version>2.0.2</version>
