--- a/lect-web-parent/lect-web-api/pom.xml
+++ b/lect-web-parent/lect-web-api/pom.xml
@@ -18,6 +18,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<log4j.version>2.17.1</log4j.version>
 		<resteasy.version>4.6.0.Final</resteasy.version>
+		<jackson.version>2.13.4</jackson.version>
 	</properties>
 
 	<build>
@@ -128,7 +129,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.13.2</version>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<dependency>
