core: fixed minor non-existent setting with Latex tool

--- a/lect-javafx/pom.xml
+++ b/lect-javafx/pom.xml
@@ -57,6 +57,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-fxml</artifactId>
 			<version>${javafx.version}</version>
 		</dependency>
