editor-api: added feature to replace multiple slides at once #253

--- a/lect-editor-api/pom.xml
+++ b/lect-editor-api/pom.xml
@@ -19,35 +19,57 @@
 	</properties>
 
 	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<targetPath>resources</targetPath>
-				<filtering>false</filtering>
-			</resource>
-		</resources>
-	</build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <targetPath>resources</targetPath>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>false</filtering>
+            </testResource>
+        </testResources>
+    </build>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.lecturestudio.core</groupId>
-			<artifactId>lect-core</artifactId>
-			<version>4.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.lecturestudio.swing</groupId>
-			<artifactId>lect-swing</artifactId>
-			<version>4.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.lecturestudio.media</groupId>
-			<artifactId>lect-media</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.lecturestudio.player</groupId>
-			<artifactId>lect-player-web</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.lecturestudio.core</groupId>
+            <artifactId>lect-core</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.lecturestudio.core</groupId>
+            <artifactId>lect-core</artifactId>
+            <version>4.0.0</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.lecturestudio.swing</groupId>
+            <artifactId>lect-swing</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.lecturestudio.media</groupId>
+            <artifactId>lect-media</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.lecturestudio.player</groupId>
+            <artifactId>lect-player-web</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
 </project>
