--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,9 +40,10 @@ jobs:
 
     steps:
     - name: Setup Java JDK
-      uses: actions/setup-java@v1.3.0
+      uses: actions/setup-java@v3
       with:
-        java-version: 14
+        distribution: 'microsoft'
+        java-version: '14'
 
     - name: Checkout repository
       uses: actions/checkout@v3
