project: minor refactorings

--- a/lect-web-parent/lect-web-api/pom.xml
+++ b/lect-web-parent/lect-web-api/pom.xml
@@ -54,7 +54,7 @@
 		</repository>
 		<repository>
 			<id>central</id>
-			<url>http://central</url>
+			<url>https://central</url>
 			<releases><enabled>true</enabled></releases>
 			<snapshots><enabled>true</enabled></snapshots>
 		</repository>
